--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,36 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.DementiaApp">
 
-        <activity android:name=".presentation.MainActivity">
+        <activity
+            android:name=".presentation.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".presentation.SetReminderActivity" />
-        <activity android:name=".presentation.GetReminderActivity" />
-        <activity android:name=".presentation.AboutMeActivity" />
+        <activity
+            android:name=".presentation.SetReminderActivity"
+            android:exported="true">
+        </activity>
 
-        <receiver android:name=".presentation.ReminderReceiver" />
+        <activity
+            android:name=".presentation.GetReminderActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".presentation.AboutMeActivity"
+            android:exported="true">
+        </activity>
+
+        <receiver
+            android:name=".presentation.ReminderReceiver"
+            android:exported="true">
+        </receiver>
 
     </application>
 </manifest>
